--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Certified Construction</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="../../src/index.css"/>
 </head>
 <body>
 
