--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,15 +1,15 @@
 <!-- main.hbs-->
 
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Certified Construction</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="../../src/index.css"/>
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <script src="../js/index.js"></script>
+  </head>
+  <body>
 
     {{{body}}}
 
-</body>
+  </body>
 </html>
