Update Training Sessions page

--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -5,9 +5,9 @@
   <a href="/">Home</a>
   <a href="departments">Departments</a>
   <a href="certifications">Certifications</a>
+  <a href="employees">Employees</a>
   <a href="training_sessions">Training Sessions</a>
   <a href="employee_certifications">Employee Certifications</a>
-  <a href="employee_training">Employee Training</a>
 </nav>
 <main>
   <div id="browse">
