--- a/public/css/index.css
+++ b/public/css/index.css
@@ -339,6 +339,10 @@ sup {
   display: none;
 }
 
+.trainingCheckbox {
+  display: inline;
+}
+
 /* Mobile Styling */
 @media screen and (max-width: 75ch) {
   body,
