--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -4,10 +4,10 @@
 <nav>
   <a href="/">Home</a>
   <a href="departments">Departments</a>
+  <a href="certifications">Certifications</a>
   <a href="employees">Employees</a>
   <a href="training_sessions">Training Sessions</a>
   <a href="employee_certifications">Employee Certifications</a>
-  <a href="employee_training">Employee Training</a>
 </nav>
 <main>
   <!-- Display certifications in a table -->
