--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -3,11 +3,11 @@
 </header>
 <nav>
   <a href="/">Home</a>
+  <a href="departments">Departments</a>
   <a href="certifications">Certifications</a>
   <a href="employees">Employees</a>
   <a href="training_sessions">Training Sessions</a>
   <a href="employee_certifications">Employee Certifications</a>
-  <a href="employee_training">Employee Training</a>
 </nav>
 <p>View and manage all company departments below:</p>
 
