--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -20,7 +20,7 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Email</th>
-        <th>Department ID</th>
+        <th>Department</th>
       </tr>
       <!-- Sample employee data -->
       <tr>
@@ -46,7 +46,7 @@
         <td>Vladimir</td>
         <td>Collier</td>
         <td>hendrerit.neque@aol.org</td>
-        <td align="right">1</td>
+        <td>Engineering</td>
       </tr>
       <tr>
         <td>
@@ -71,7 +71,7 @@
         <td>Donna</td>
         <td>Lott</td>
         <td>id.nunc@yahoo.net</td>
-        <td align="right">1</td>
+        <td>Engineering</td>
       </tr>
       <tr>
         <td>
@@ -96,7 +96,7 @@
         <td>Athena</td>
         <td>Fry</td>
         <td>molestie.sed@hotmail.ca</td>
-        <td align="right">2</td>
+        <td>Human Resources</td>
       </tr>
       <tr>
         <td>
@@ -121,7 +121,7 @@
         <td>Igor</td>
         <td>Parks</td>
         <td>suspendisse.eleifend.cras@yahoo.co.uk</td>
-        <td align="right">3</td>
+        <td>Technicians</td>
       </tr>
       <tr>
         <td>
@@ -146,7 +146,7 @@
         <td>Sybill</td>
         <td>Robles</td>
         <td>elit.a@protonmail.org</td>
-        <td align="right">3</td>
+        <td>Technicians</td>
       </tr>
       <tr>
         <td>
@@ -171,7 +171,7 @@
         <td>Lucian</td>
         <td>Jordan</td>
         <td>cubilia.curae@icloud.ca</td>
-        <td align="right">3</td>
+        <td>Technicians</td>
       </tr>
       <tr>
         <td>
@@ -196,7 +196,7 @@
         <td>Sharon</td>
         <td>Murray</td>
         <td>et.commodo@aol.net</td>
-        <td align="right">3</td>
+        <td>Technicians</td>
       </tr>
       <tr>
         <td>
@@ -221,7 +221,7 @@
         <td>Maisie</td>
         <td>Herman</td>
         <td>mus.proin@aol.com</td>
-        <td align="right">3</td>
+        <td>Technicians</td>
       </tr>
     </table>
   </div>
