--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -14,7 +14,7 @@
 <!-- Dropdown box -->
 <label for="departments">Select a department:</label>
 <select id="departments" onchange="showDepartment(this.value)">
-  <option value="engineering">Engineering</option>
+  <option value="engineering" selected>Engineering</option>
   <option value="human_resources">Human Resources</option>
   <option value="technicians">Technicians</option>
 </select>
