--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -13,13 +13,13 @@
   <div id="browse">
     <button onClick="newEmployee()" class="btn">Add New Employee</button>
     <p><a href="#" onClick="showAll()">Display all forms</a> </p>
-    <table border="1" cellpadding="5">
+    <table border="1" cellpadding="5" class="employeeTable">
       <tr>
         <th>Action</th>
-        <th>ID</th>
+        <th class="employeeID">ID</th>
         <th>First Name</th>
         <th>Last Name</th>
-        <th>Email</th>
+        <th class="employeeEmail">Email</th>
         <th>Department</th>
       </tr>
       <!-- Sample employee data -->
@@ -250,14 +250,16 @@
       <legend><strong>Update Employee</strong></legend>
       <fieldset>
         <input type="hidden" name="employeeID" id="updateEmployeeID" />
-        <label>ID: <span id="updateEmployeeIDSpan"></span></label>
+        <div>
+          <label>ID: <span id="updateEmployeeIDSpan"></span></label>
+        </div>
         <label>First Name:
           <input type="text" name="fname" id="updateEmployeeFName" /></label>
         <label>Last Name:
           <input type="text" name="lname" id="updateEmployeeLName" /></label>
         <label>Email:
           <input type="text" name="email" id="updateEmployeeEmail" /></label>
-        <label>Department ID:
+        <label>Department:
           <input type="text" name="deptID" id="updateEmployeeDeptID" /></label>
       </fieldset>
       <input class="btn" type="submit" value="Update Employee" />
@@ -274,7 +276,9 @@
     <form method="POST" id="deleteEmployee">
       <legend><strong>Delete Employee</strong></legend>
       <fieldset>
-        <label>ID: <span id="deleteEmployeeIDSpan"></span></label>
+        <div>
+          <label>ID: <span id="deleteEmployeeIDSpan"></span></label>
+        </div>
         <label>Name: <span id="deleteEmployeeNameSpan"></span></label>
         <input type="hidden" name="employeeID" id="deleteEmployeeID" />
       </fieldset>
