--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -1,4 +1,13 @@
-<header>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Certified Construction</title>
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <script src="../js/index.js"></script>
+  </head>
+  <body>
+
+    <header>
   <h1>Employees</h1>
 </header>
 <nav>
@@ -7,7 +16,8 @@
   <a href="certifications">Certifications</a>
   <a href="employees">Employees</a>
   <a href="training_sessions">Training Sessions</a>
-  <a href="employee_certifications">Employee Certifications</a>
+  <a href="employees_cert">Employee Certifications</a>
+  <a href="employees_train">Employee Training Section</a>
 </nav>
 <main>
   <div id="browse">
@@ -292,3 +302,6 @@
     </form>
   </div>
 </main>
+
+  </body>
+</html>
