--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -1,4 +1,16 @@
-<header>
+
+<!-- main.hbs-->
+
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Certified Construction</title>
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <script src="../js/index.js"></script>
+  </head>
+  <body>
+
+    <header>
   <h1>Certifications</h1>
 </header>
 <nav>
@@ -7,7 +19,8 @@
   <a href="certifications">Certifications</a>
   <a href="employees">Employees</a>
   <a href="training_sessions">Training Sessions</a>
-  <a href="employee_certifications">Employee Certifications</a>
+  <a href="employees_cert">Employee Certifications</a>
+  <a href="employees_train">Employee Training Section</a>
 </nav>
 <main>
   <!-- Display certifications in a table -->
@@ -357,3 +370,6 @@
     </form>
   </div>
 </main>
+
+  </body>
+</html>
