--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<!-- index.hbs -->
+
 <header>
   <h1>Certified Construction: Database Management System</h1>
   <p>This is the main portal to access and manage different aspects of our
@@ -19,9 +19,12 @@
   <p><a href="/training_sessions">Training Sessions</a> | 
     Schedule, update, and manage training sessions. Link sessions to
     certifications and manage dates and locations.</>
-  <p><a href="/employee_certifications">Employee Certifications</a> | 
+  <p><a href="/employees_cert">Employee Certifications</a> | 
     Assign, update, and manage certifications for each employee. Keep track of
     certification expiry and renewals.</p>
+  <p><a href="/employees_train">Employee Training Section</a> | 
+    Assign, update, and manage employee training section for each employee.</p>
+
 </nav>
 <main>
   <section>
